--- a/README
+++ b/README
@@ -38,4 +38,5 @@ executar o código, é possível seguir os passos descritos a seguir:
 .
 REFERÊNCIAS
 
-Google Developers, 2021. Disponível em: <https://developers.google.com/maps/documentation/geocoding/start?hl=pt>
+Google Developers. Geocoding API: Get Started. 2021. Disponível em: <https://developers.google.com/maps/documentation/geocoding/start?hl=pt>
+Google Developers. Geocoding API: Get an API Key. 2021. Disponível em: <https://developers.google.com/maps/documentation/geocoding/get-api-key?hl=pt>
